--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/justin-unity-final-web-compressed.loader.js";
+      var loaderUrl = buildUrl + "/justin-unity-final-web-compressed2.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/justin-unity-final-web-compressed.data.br",
-        frameworkUrl: buildUrl + "/justin-unity-final-web-compressed.framework.js.br",
-        codeUrl: buildUrl + "/justin-unity-final-web-compressed.wasm.br",
+        dataUrl: buildUrl + "/justin-unity-final-web-compressed2.data.unityweb",
+        frameworkUrl: buildUrl + "/justin-unity-final-web-compressed2.framework.js.unityweb",
+        codeUrl: buildUrl + "/justin-unity-final-web-compressed2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Justin - ITP",
         productName: "Home Harmonics (Hypercinema Final)",
